[metadata]
name = comm
description = Jupyter Python Comm implementation, for usage in ipykernel, xeus-python etc.
long_description = file: README.md
long_description_content_type = text/markdown
license = BSD 3-Clause
license_file = LICENSE
author = Jupyter contributors
url = https://github.com/martinRenou/comm
keywords = jupyter, ipykernel, xeus-python

[options]
packages = find:
install_requires =
    traitlets
classifiers =
    Framework :: Jupyter
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Topic :: Multimedia :: Graphics
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
python_requires = >=3.6
zip_safe = False

[bdist_wheel]
universal=1
